hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__borrow_array__test__emit_array_value@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/collections/borrow_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { ptr, ptr, i64 } @_hl.main.1() !dbg !3 {
alloca_block:
  %"0" = alloca { ptr, ptr, i64 }, align 8
  %"5_0" = alloca { ptr, ptr, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %array_size = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64)
  %0 = call ptr @malloc(i64 %array_size)
  %1 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64))
  call void @llvm.memset.p0.i64(ptr %1, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false)
  %2 = insertvalue { ptr, ptr, i64 } poison, ptr %0, 0
  %3 = insertvalue { ptr, ptr, i64 } %2, ptr %1, 1
  %4 = insertvalue { ptr, ptr, i64 } %3, i64 0, 2
  %5 = getelementptr inbounds i64, ptr %0, i32 0
  store i64 1, ptr %5, align 4
  %6 = getelementptr inbounds i64, ptr %0, i32 1
  store i64 2, ptr %6, align 4
  store { ptr, ptr, i64 } %4, ptr %"5_0", align 8
  %"5_01" = load { ptr, ptr, i64 }, ptr %"5_0", align 8
  store { ptr, ptr, i64 } %"5_01", ptr %"0", align 8
  %"02" = load { ptr, ptr, i64 }, ptr %"0", align 8
  ret { ptr, ptr, i64 } %"02"
}

declare ptr @malloc(i64)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/PNzlVLClAphFGIyrhvZsHeD")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25761, type: !5, scopeLine: 25762, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ ptr, ptr, i64 }", file: !2, size: 24, align: 8, elements: !8)
!8 = !{!9, !9, !10}
!9 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!10 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
