hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__borrow_array__test__emit_clone@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/collections/borrow_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [39 x i8] c"Some array elements have been borrowed\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal void @_hl.main.1() !dbg !3 {
alloca_block:
  %"7_0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca { ptr, ptr, i64 }, align 8
  %"9_0" = alloca { ptr, ptr, i64 }, align 8
  %"9_1" = alloca { ptr, ptr, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 2, ptr %"7_0", align 4
  store i64 1, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load i64, ptr %"7_0", align 4
  %array_size = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), !dbg !6
  %0 = call ptr @malloc(i64 %array_size), !dbg !6
  %1 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64)), !dbg !6
  call void @llvm.memset.p0.i64(ptr %1, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false), !dbg !6
  %2 = insertvalue { ptr, ptr, i64 } poison, ptr %0, 0, !dbg !6
  %3 = insertvalue { ptr, ptr, i64 } %2, ptr %1, 1, !dbg !6
  %4 = insertvalue { ptr, ptr, i64 } %3, i64 0, 2, !dbg !6
  %5 = getelementptr inbounds i64, ptr %0, i64 0, !dbg !6
  store i64 %"5_01", ptr %5, align 4, !dbg !6
  %6 = getelementptr inbounds i64, ptr %0, i64 1, !dbg !6
  store i64 %"7_02", ptr %6, align 4, !dbg !6
  store { ptr, ptr, i64 } %4, ptr %"8_0", align 8, !dbg !6
  %"8_03" = load { ptr, ptr, i64 }, ptr %"8_0", align 8
  %array_ptr = extractvalue { ptr, ptr, i64 } %"8_03", 0, !dbg !7
  %array_mask_ptr = extractvalue { ptr, ptr, i64 } %"8_03", 1, !dbg !7
  %array_offset = extractvalue { ptr, ptr, i64 } %"8_03", 2, !dbg !7
  call void @__barray_check_none_borrowed(ptr %array_mask_ptr, i64 %array_offset, i64 2), !dbg !7
  %array_size4 = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), !dbg !7
  %7 = call ptr @malloc(i64 %array_size4), !dbg !7
  %8 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64)), !dbg !7
  call void @llvm.memset.p0.i64(ptr %8, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false), !dbg !7
  %9 = insertvalue { ptr, ptr, i64 } poison, ptr %7, 0, !dbg !7
  %10 = insertvalue { ptr, ptr, i64 } %9, ptr %8, 1, !dbg !7
  %11 = insertvalue { ptr, ptr, i64 } %10, i64 0, 2, !dbg !7
  %12 = getelementptr inbounds i64, ptr %array_ptr, i64 %array_offset, !dbg !7
  %13 = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), !dbg !7
  call void @llvm.memcpy.p0.p0.i64(ptr %7, ptr %12, i64 %13, i1 false), !dbg !7
  store { ptr, ptr, i64 } %"8_03", ptr %"9_0", align 8, !dbg !7
  store { ptr, ptr, i64 } %11, ptr %"9_1", align 8, !dbg !7
  %"9_15" = load { ptr, ptr, i64 }, ptr %"9_1", align 8
  %array_ptr6 = extractvalue { ptr, ptr, i64 } %"9_15", 0, !dbg !8
  call void @free(ptr %array_ptr6), !dbg !8
  %"9_07" = load { ptr, ptr, i64 }, ptr %"9_0", align 8
  %array_ptr8 = extractvalue { ptr, ptr, i64 } %"9_07", 0, !dbg !9
  call void @free(ptr %array_ptr8), !dbg !9
  ret void
}

declare ptr @malloc(i64)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

define internal void @__barray_check_none_borrowed(ptr %0, i64 %1, i64 %2) {
  %4 = udiv i64 %1, 64, !dbg !7
  %5 = getelementptr inbounds i64, ptr %0, i64 %4, !dbg !7
  %6 = load i64, ptr %5, align 4, !dbg !7
  %7 = urem i64 %1, 64, !dbg !7
  %8 = shl i64 -1, %7, !dbg !7
  %9 = and i64 %6, %8, !dbg !7
  store i64 %9, ptr %5, align 4, !dbg !7
  %10 = add i64 %1, %2, !dbg !7
  %last_valid = sub i64 %10, 1, !dbg !7
  %11 = udiv i64 %last_valid, 64, !dbg !7
  %12 = getelementptr inbounds i64, ptr %0, i64 %11, !dbg !7
  %13 = load i64, ptr %12, align 4, !dbg !7
  %14 = urem i64 %last_valid, 64, !dbg !7
  %15 = add i64 %14, 1, !dbg !7
  %16 = sub i64 64, %15, !dbg !7
  %17 = lshr i64 -1, %16, !dbg !7
  %18 = and i64 %13, %17, !dbg !7
  store i64 %18, ptr %12, align 4, !dbg !7
  %19 = udiv i64 %1, 64, !dbg !7
  %20 = udiv i64 %last_valid, 64, !dbg !7
  %21 = sub i64 %20, %19, !dbg !7
  %22 = add i64 %21, 1, !dbg !7
  %23 = alloca i64, align 8, !dbg !7
  store i64 0, ptr %23, align 4, !dbg !7
  br label %24, !dbg !7

24:                                               ; preds = %mask_block_ok, %3
  %25 = load i64, ptr %23, align 4, !dbg !7
  %26 = icmp ult i64 %25, %22, !dbg !7
  br i1 %26, label %27, label %33, !dbg !7

27:                                               ; preds = %24
  %28 = load i64, ptr %23, align 4, !dbg !7
  %29 = add i64 %28, %19, !dbg !7
  %30 = getelementptr inbounds i64, ptr %0, i64 %29, !dbg !7
  %31 = load i64, ptr %30, align 4, !dbg !7
  %32 = icmp eq i64 %31, 0, !dbg !7
  br i1 %32, label %mask_block_ok, label %mask_block_err, !dbg !7

33:                                               ; preds = %24
  ret void, !dbg !7

mask_block_err:                                   ; preds = %27
  %34 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 2, ptr @0), !dbg !7
  call void @abort(), !dbg !7
  unreachable, !dbg !7

mask_block_ok:                                    ; preds = %27
  %35 = add i64 %28, 1, !dbg !7
  store i64 %35, ptr %23, align 4, !dbg !7
  br label %24, !dbg !7
}

declare i32 @printf(ptr, ...)

declare void @abort()

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #1

declare void @free(ptr)

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
attributes #1 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/eXFfvzCkHdtWCCn/JhPKiWSKICgZuRNRvRJmbr.gpy.py", directory: "")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !2, line: 10060, type: !4, scopeLine: 10061, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{null}
!6 = !DILocation(line: 13582, column: 372, scope: !3)
!7 = !DILocation(line: 1712, column: 109, scope: !3)
!8 = !DILocation(line: 21129, column: 412, scope: !3)
!9 = !DILocation(line: 352, column: 366, scope: !3)
