hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__borrow_array__test__emit_get@llvm21.snap
---
source: hugr-llvm/src/extension/collections/borrow_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [34 x i8] c"Array element is already borrowed\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal void @_hl.main.1() !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %array_size = mul i64 2, ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), !dbg !7
  %0 = call ptr @malloc(i64 %array_size), !dbg !7
  %1 = call ptr @malloc(i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64)), !dbg !7
  call void @llvm.memset.p0.i64(ptr %1, i8 0, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i1 false), !dbg !7
  %2 = insertvalue { ptr, ptr, i64 } poison, ptr %0, 0, !dbg !7
  %3 = insertvalue { ptr, ptr, i64 } %2, ptr %1, 1, !dbg !7
  %4 = insertvalue { ptr, ptr, i64 } %3, i64 0, 2, !dbg !7
  %5 = getelementptr inbounds i64, ptr %0, i64 0, !dbg !7
  store i64 1, ptr %5, align 4, !dbg !7
  %6 = getelementptr inbounds i64, ptr %0, i64 1, !dbg !7
  store i64 2, ptr %6, align 4, !dbg !7
  %array_ptr = extractvalue { ptr, ptr, i64 } %4, 0, !dbg !8
  %array_mask_ptr = extractvalue { ptr, ptr, i64 } %4, 1, !dbg !8
  %array_offset = extractvalue { ptr, ptr, i64 } %4, 2, !dbg !8
  %7 = icmp ult i64 1, 2, !dbg !8
  br i1 %7, label %9, label %8, !dbg !8

8:                                                ; preds = %entry_block
  br label %14, !dbg !8

9:                                                ; preds = %entry_block
  %10 = add i64 1, %array_offset, !dbg !8
  notail call void @__barray_mask_check_not_borrowed(ptr %array_mask_ptr, i64 %10), !dbg !8
  %11 = getelementptr inbounds i64, ptr %array_ptr, i64 %10, !dbg !8
  %12 = load i64, ptr %11, align 4, !dbg !8
  %13 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %12, 1, !dbg !8
  br label %14, !dbg !8

14:                                               ; preds = %8, %9
  %"0.0" = phi { i1, i64 } [ %13, %9 ], [ { i1 false, i64 poison }, %8 ], !dbg !8
  %array_ptr8 = extractvalue { ptr, ptr, i64 } %4, 0, !dbg !9
  call void @free(ptr %array_ptr8), !dbg !9
  ret void
}

declare ptr @malloc(i64)

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr writeonly captures(none), i8, i64, i1 immarg) #0

define internal void @__barray_mask_check_not_borrowed(ptr %0, i64 %1) {
  %3 = udiv i64 %1, 64, !dbg !8
  %4 = getelementptr inbounds i64, ptr %0, i64 %3, !dbg !8
  %5 = load i64, ptr %4, align 4, !dbg !8
  %6 = urem i64 %1, 64, !dbg !8
  %7 = lshr i64 %5, %6, !dbg !8
  %8 = trunc i64 %7 to i1, !dbg !8
  br i1 %8, label %panic, label %ok, !dbg !8

panic:                                            ; preds = %2
  %9 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 2, ptr @0), !dbg !8
  call void @abort(), !dbg !8
  unreachable, !dbg !8

ok:                                               ; preds = %2
  ret void, !dbg !8
}

declare i32 @printf(ptr, ...)

declare void @abort()

declare void @free(ptr)

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lVLClAphFGIyrhvZsHeDgUnyeIVwAut")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{null}
!7 = !DILocation(line: 27062, column: 402, scope: !3)
!8 = !DILocation(line: 5388, column: 404, scope: !3)
!9 = !DILocation(line: 10060, column: 368, scope: !3)
